syntax = "proto3";


package greet;
option go_package = "github.com/udemy/greet/proto";

message GreetRequest {
    string first_name = 1;
}

message GreetResponse {
    string result = 1;
}

message GreetSumRequest {
    int32 number1 = 1;
    int32 number2 = 2;
}

message GreetSumResponse {
    int32 result = 1;
}

service GreetService {
    rpc Greet (GreetRequest) returns (GreetResponse);
}

service GreetSumService {
    rpc GreetSum (GreetSumRequest) returns (GreetSumResponse);
}





